chore: enable separate finish branches in git-flow config
- Set separateFinishBranches to true in maven git-flow plugin
- Ensures release and hotfix branches are kept separate during finish operations

--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,7 @@
                         <commitDevelopmentVersionAtStart>true</commitDevelopmentVersionAtStart>
                         <pushRemote>true</pushRemote>
                         <skipFeatureVersion>false</skipFeatureVersion>
+                        <separateFinishBranches>true</separateFinishBranches>
                         <!-- Activate release profile during release/hotfix finish -->
                         <argLine>-DperformRelease=true</argLine>
                         <gitFlowConfig>
